feat(scenario): 목록 조회 deletable 계산 및 삭제 가드 구현
시나리오 목록 조회 시 연결된 세션이 하나도 없으면 deletable=true로 응답한다.
삭제 시에는 세션이 하나라도 있으면 SCENARIO_DELETE_NOT_ALLOWED를 던져 막는다.