@@ -7,11 +7,14 @@ import com.saferoute.domain.training.dto.ScenarioResponse;
 import com.saferoute.domain.training.dto.UpdateScenarioRequest;
 import com.saferoute.domain.training.entity.TrainingScenario;
 import com.saferoute.domain.training.repository.TrainingScenarioRepository;
+import com.saferoute.domain.training.repository.TrainingSessionRepository;
 import com.saferoute.domain.user.entity.User;
 import com.saferoute.domain.user.repository.UserRepository;
+import com.saferoute.global.api.error.TrainingErrorCode;
+import com.saferoute.global.api.exception.ApiException;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,14 +25,23 @@ import org.springframework.transaction.annotation.Transactional;
 public class TrainingScenarioService {
 
     private final TrainingScenarioRepository scenarioRepository;
+    private final TrainingSessionRepository trainingSessionRepository;
     private final BuildingRepository buildingRepository;
     private final UserRepository userRepository;
 
-    // 목록 조회
+    // 목록 조회 (deletable = 연결된 훈련 세션이 하나도 없는 시나리오인지 여부)
     public List<ScenarioResponse> getScenarios() {
-        return scenarioRepository.findAll().stream()
-                .map(ScenarioResponse::from)
-                .collect(Collectors.toList());
+        List<TrainingScenario> scenarios = scenarioRepository.findAll();
+        if (scenarios.isEmpty()) {
+            return List.of();
+        }
+
+        List<UUID> scenarioIds = scenarios.stream().map(TrainingScenario::getId).toList();
+        Set<UUID> scenarioIdsWithSession = trainingSessionRepository.findScenarioIdsWithAnySession(scenarioIds);
+
+        return scenarios.stream()
+                .map(scenario -> ScenarioResponse.from(scenario, !scenarioIdsWithSession.contains(scenario.getId())))
+                .toList();
     }
 
     // 단건 조회
@@ -71,10 +83,13 @@ public class TrainingScenarioService {
         return ScenarioResponse.from(scenario);
     }
 
-    // 삭제
+    // 삭제 (훈련 세션이 하나라도 연결된 시나리오는 삭제 불가 - 과거 훈련 기록 보존을 위해)
     @Transactional
     public void deleteScenario(UUID id) {
         TrainingScenario scenario = findById(id);
+        if (trainingSessionRepository.existsByScenario_Id(id)) {
+            throw new ApiException(TrainingErrorCode.SCENARIO_DELETE_NOT_ALLOWED);
+        }
         scenarioRepository.delete(scenario);
     }
 
